# Security-camera-installation-project

./: README.md  user.yml
A1/: README.md  ece650-a1.py  test.py
A2/: README.md
A3/: README.md  ece650-a2.cpp  ece650-a3.cpp  rgen.cpp
A4/: README.md  ece650-a4.cpp
project/: CMakeLists.txt  README.md  ece650-prj.cpp  input.h
